--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -25,7 +25,16 @@
 }
 .contact-image{
     width: 70%;
+    opacity: 0;
+    transform: scale(0.5);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
+
+.contact-image.appear {
+    opacity: 1;
+    transform: scale(1);
+}
+
 
 .contact-form {
 
