--- a/src/styles/LandPage.css
+++ b/src/styles/LandPage.css
@@ -6,10 +6,9 @@
     background-image: url(../assets/images/mainBackground.jpg);
     /* background-attachment: fixed; */
     background-size: cover;
-    overflow: hidden !important;
+    overflow: hidden;
   }
   .main-container {
-    overflow: hidden;
     position: relative;
     background-color: transparent;
   }
@@ -77,16 +76,15 @@
   }
   
   .my-name {
-    font-size: 50px;
+    font-size: 48px;
     font-weight: 800;
     margin-bottom: 20px;
     display: inline-block;
-    text-shadow: 1px 1px 2px rgb(16, 6, 68), 0 0 1.2em rgb(0, 157, 255), 0 0 0.8em rgb(0, 140, 255);
+    text-shadow: 1px 1px 2px rgb(16, 6, 68), 0 0 1.2em rgba(70, 184, 255, 0.311), 0 0 0.8em rgba(0, 140, 255, 0.486);
   }
   .wrapped-word {
-    padding-right: 5px;
     border-right: 5px solid rgb(91, 91, 91);
-    text-shadow: 1px 1px 2px rgb(34, 6, 54), 0 0 1em rgb(0, 255, 255), 0 0 0.2em rgb(0, 238, 255);
+    text-shadow: 1px 1px 2px rgb(34, 6, 54), 0 0 1em rgba(0, 255, 255, 0.716), 0 0 0.2em rgba(0, 238, 255, 0.645);
   }
   .main-info {
     color: #e9e9e9;
@@ -129,18 +127,18 @@
     top: 50%;
     left: 50%;
     transform: translate(-50% , -50%);
-    animation: bounce 2s ease 0s infinite normal forwards;
+    animation: bounce 3s ease-in-out 0s infinite normal forwards;
   }
 
   @keyframes bounce {
     0% {
-      top: 48%;
+      top: calc(50% - 10px);
     }
     50% {
-        top: 52%;
+        top: calc(50% + 15px);
     }
     100% {
-      top: 48%;
+      top:calc(50% - 10px);
     }
   }
 
