--- a/src/styles/LandPage.css
+++ b/src/styles/LandPage.css
@@ -70,8 +70,7 @@
     /* margin: 0 0 20px 0; */
     margin-bottom: 20px;
     display: inline-block;
-    background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%) ;
-    
+    background: linear-gradient(91deg , #de0085a5 0%, #2200b9a5 125%);
     border: 1px solid rgba(255, 255, 255, 0.5);
   }
   
@@ -118,11 +117,44 @@
   .main-img-box {
     /* background-color: #FFF; */
     position: relative;
-    min-height: 400px;
-  
+    height: 400px;
   }
+  .main-photo-background {
+    margin: auto;
+    width: 75%;
+    height: 110%;
+    border-radius: 30% 70% 27% 73% / 36% 43% 57% 64% ;
+    background: linear-gradient(91deg , #65009cda 0%, #ff00d0c7 125%);
+    animation: shaping 6s ease-in-out 0s infinite normal forwards;
+    overflow: hidden;
+    position: relative;
+  }
+  @keyframes shaping {
+    0%,100% { 
+          border-radius: 63% 37% 54% 46% / 55% 48% 52% 45%;  
+        } 
+    14% { 
+      border-radius: 40% 60% 54% 46% / 49% 60% 40% 51%;
+        } 
+    28% {
+        border-radius: 54% 46% 38% 62% / 49% 70% 30% 51%; 
+      } 
+    42% {
+        border-radius: 61% 39% 55% 45% / 61% 38% 62% 39%; 
+      } 
+    56% {
+        border-radius: 61% 39% 67% 33% / 70% 50% 50% 30%; 
+      } 
+    70% {
+        border-radius: 50% 50% 34% 66% / 56% 68% 32% 44%; 
+      } 
+    84% {
+        border-radius: 46% 54% 50% 50% / 35% 61% 39% 65%; 
+      } 
+  }
+  
   .main-photo {
-    width: 60%;
+    width: 105%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -143,11 +175,44 @@
   }
 
 
-@media (width < 776px) {
-  .main-photo {
-    width: 65%;
-  }
 
+  @media (min-width: 1400px) and (max-width: 1530px) {
+    .main-photo-background{
+      height: 100%;
+      width: 80%;
+    }
+    .main-photo  {
+      width: 100%;
+    }    
+    
+  }
+  @media (min-width: 992px) and (max-width: 1399px) {
+    .main-photo-background{
+      height: 100%;
+      width: 80%;
+    }
+    .main-photo  {
+      width: 120%;
+    }    
+}
+  @media (min-width: 776px) and (max-width: 992px) {
+    .main-photo-background{
+      height: 100%;
+      width: 75%;
+    }
+    .main-photo  {
+      width: 92%;
+    }
+}
+
+@media (width < 776px) {
+  .main-photo-background{
+    height: 80%;
+    width: 75%;
+  }
+  .main-photo  {
+
+  }
 }
 
 * {
