--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -42,6 +42,7 @@
 }
 .contact-title {
     font-weight: 700;
+    text-shadow: 1px 1px 2px rgb(16, 6, 68), 0 0 1.2em rgb(2, 74, 95);
 }
 
 .input-group {
