--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -44,7 +44,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: linear-gradient(91deg , #e149a5 0%, #5839e1 125%);
+    background: linear-gradient(91deg , #ff3bd1 30%, #0803ff 125%);
     z-index: -1;
     transition: 0.3s;
   }
@@ -92,7 +92,7 @@
     left: 0;
     width: 100%;
     height: 0%;
-    background: linear-gradient(180deg , #b2016bd0 0%, #2400c3e5 125%);
+    background: linear-gradient(180deg , #b2016b 0%, #2400c3 125%);
     opacity: 0.8;
     transition: 0.4s;
   }
