--- a/src/styles/ContactForm.css
+++ b/src/styles/ContactForm.css
@@ -9,6 +9,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+.contact-section::before {
+    content: '';
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 150px;
+    z-index: 0;
+    /* background-color: rgb(77, 255, 0); */
+    background: linear-gradient(0deg , #000000 -2%, #ffffff00 70%);
+    
 }
 .contact-container{
     padding: 0;
