--- a/src/styles/LandPage.css
+++ b/src/styles/LandPage.css
@@ -6,7 +6,16 @@
     background-image: url(../assets/images/mainBackground.jpg);
     /* background-attachment: fixed; */
     background-size: cover;
-    overflow: hidden;
+    position: relative;
+  }
+  .main::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(0deg , #000000 0%, #ffffff00 100%);
   }
   .main-container {
     position: relative;
