--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -3,9 +3,18 @@
     position: relative;
     background-color: #b3b3b300;
     padding: 50px;
-  
     text-align: center;
     height: 500px;
+  }
+  .skills-section::after {
+    content: '';
+    position: absolute;
+    bottom: -25px;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    z-index: 2;
+    background: linear-gradient(0deg , #0b021a 0%, #070707 100%);
   }
   .skills-outer-container {
     background-color: #000000;
